# tiny-ml-runtime

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  export_mnist.py  export_weights.py  inference.c  inference_module.c  mnist_weights.npy  pyproject.toml  requirements.txt  setup.py  test_inference.c  train.py  weights.npy
.github/workflows/: ci-enhanced.yml  ci.yml
docs/: ARCHITECTURE.md  INTERVIEW_GUIDE.md  TECHNICAL_ANALYSIS.md
python/: benchmark.py  benchmark_mnist.py  export_mnist.py  export_weights.py  train.py  train_mnist.py
scripts/: benchmark.py
src/: inference.c  inference_module.c  test_inference.c
src/c/: inference.c  inference.h  inference_module.c  test_inference.c
src/python/: benchmark_mnist.py  export_mnist.py  export_weights.py  train.py  train_mnist.py
tests/c/: test_inference_unity.c
tests/c/unity/: unity.c  unity.h
tests/python/: test_inference_module.py
tests/unit/: test_train.py
