[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinymlinference"
version = "1.0.0"
description = "Generic neural network inference engine in pure C — callable from Python"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Odeliya Charitonova", email = "171728738+odeliyach@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
keywords = ["machine-learning", "neural-network", "inference", "c", "performance"]

[tool.setuptools]
py-modules = []

[project.urls]
Homepage = "https://github.com/odeliyach/tiny-ml-runtime"
Repository = "https://github.com/odeliyach/tiny-ml-runtime"
"Bug Tracker" = "https://github.com/odeliyach/tiny-ml-runtime/issues"
